--- a/vignettes/articles/ag5Tools.Rmd
+++ b/vignettes/articles/ag5Tools.Rmd
@@ -14,9 +14,14 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 ```
-## CDSAPI Installation
-To download AgERA5 data from the Copernicus Climate Data Store (CDS) you should first follow the steps 
-described on the [CDS API Guide](https://cds.climate.copernicus.eu/api-how-to) to install the Python CDSAPI.
+## Get the CDS API-Key
+To download AgERA5 data from the Copernicus Climate Data Store (CDS) you should first register and get your
+API Key from the [CDS API Guide](https://cds.climate.copernicus.eu/api-how-to).
+
+Once you have your API Key, you should create a file named \code{.cdsapirc}. See more details at the
+[CDS API Guide](https://cds.climate.copernicus.eu/api-how-to)
+
+You do not need to install Python or the cdsapi client, Ag5Tools will do it if required.
 
 ## Downloading AgERA5 data
 The following example downloads varaible "2m_temperature". For this variable there seven statistics available:  
